manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{img_lowercase_name}#
  labels:
    tags.datadoghq.com/env: #{env_short_code}#
    tags.datadoghq.com/service: #{img_lowercase_name}#
    tags.datadoghq.com/version: #{BranchVersion}#
spec:
  replicas: #{replicas}#
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%  
  selector:
    matchLabels:
      app: #{img_lowercase_name}#
  template:
    metadata:
      annotations:
        ad.datadoghq.com/tags: '{"abinbev_product": "#{abinbev_product}#","abinbev_tower": "#{abinbev_tower}#"}'
        ad.datadoghq.com/#{img_lowercase_name}#.logs: >-
          [{
            "source": "dotnet",
            "service": "#{img_lowercase_name}#",
            "log_processing_rules": [{
              "type": "multi_line",
              "name": "log_start_with_date",
              "pattern" : "\\[(0[0-9]|[1][0-9]|2[0-3]):(0[0-9]|[1-5][0-9]):(0[0-9]|[1-5][0-9])\\s\\w{3}\\]\\s"
            },
            {
              "type": "exclude_at_match",
              "name": "exclude_info_debug",
              "pattern" : "(\\[?INFO?]|INFO|\\sINF:\\s?|lvl=info|level=info|DEBUG|\\[?DBG])"
            }]
          }]
      labels:
        app: #{img_lowercase_name}#
        tags.datadoghq.com/env: #{env_short_code}#
        tags.datadoghq.com/service: #{img_lowercase_name}#
        tags.datadoghq.com/version: #{BranchVersion}#
        releaseId: "#{Release.ReleaseId}#"
    
    spec:
      containers:
      - name: #{img_lowercase_name}#
        image: #{a8k}#/allmobile/#{img_lowercase_name}#:#{BranchVersion}#
        imagePullPolicy: Always
        volumeMounts:
        - name: config-volume
          mountPath: /app/assets/config/
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /api/version
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 20

        resources:


      volumes:
        - name: config-volume
          configMap:
            name: #{img_lowercase_name}#-configmap
