manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: #{img_lowercase_name}# 
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: #{img_lowercase_name}#
