manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: #{img_lowercase_name}#
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/request-timeout: "600"
    appgw.ingress.kubernetes.io/connection-draining: "true"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "600"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: #{ssl-certificate}#
spec:
  rules:
  - host: #{img_lowercase_name}##{url_subdomain}#
    http:
      paths:
      - backend:
          serviceName: #{img_lowercase_name}#
          servicePort: 80
